--- a/app/design/adminhtml/default/default/template/login.phtml
+++ b/app/design/adminhtml/default/default/template/login.phtml
@@ -6,7 +6,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2018 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2020-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -22,6 +22,7 @@
     <link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
     <link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
     <script type="text/javascript" src="<?= $this->getJsUrl('validation.js') ?>"></script>
+    <script type="text/javascript" src="<?= $this->getJsUrl('maho-passkey-tools.js') ?>"></script>
 </head>
 <body id="page-login">
     <div class="login-container">
@@ -47,6 +48,10 @@
                         <div class="form-buttons">
                             <a class="left" href="<?= Mage::helper('adminhtml')->getUrl('adminhtml/index/forgotpassword', ['_nosecret' => true]) ?>"><?= Mage::helper('adminhtml')->__('Forgot your password?') ?></a>
                             <input type="submit" class="form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" />
+
+                            <button type="button" id="passkey-login-button" class="form-button">
+                                <?php echo $this->__('Login with Passkey') ?>
+                            </button>
                         </div>
                     </div>
                     <div id="step2" class="no-display">
@@ -68,9 +73,11 @@
                 history.replaceState(null, null, window.location.href);
                 const formEl = document.getElementById('loginForm');
                 const validator = new Validation(formEl);
+                const messagesEl = document.getElementById('messages');
 
                 formEl.addEventListener('submit', (event) => {
                     event.preventDefault();
+                    messagesEl.textContent = '';
                     if (!validator.validate()) {
                         return;
                     }
@@ -83,8 +90,39 @@
 
                 document.getElementById('back-button').addEventListener('click', (event) => {
                     event.preventDefault();
+                    messagesEl.textContent = '';
                     gotoStep(1);
                 });
+
+                document.getElementById('passkey-login-button').addEventListener('click', (event) => {
+                    validator.reset();
+                    messagesEl.textContent = '';
+                    if (!Validation.validate(document.getElementById('username'))) {
+                        return;
+                    }
+                    startPasskeyAuthentication();
+                });
+
+                async function mahoFetch(url, options) {
+                    const ajaxUrl = new URL(url);
+                    ajaxUrl.searchParams.set('isAjax', true);
+
+                    const response = await fetch(ajaxUrl, options);
+                    const result = await response.json();
+
+                    if (result.redirect) {
+                        window.location = result.redirect;
+                        await new Promise((resolve) => {});
+                    } else if (result.error) {
+                        throw new Error(result.message);
+                    }
+                    if (!response.ok) {
+                        throw new Error(
+                            "<?= Mage::helper('adminhtml')->__('Network Error. Please refresh the page.') ?>"
+                        );
+                    }
+                    return result;
+                }
 
                 async function gotoStep(step) {
                     if (step === 1) {
@@ -94,23 +132,12 @@
                         document.getElementById('twofa_verification_code').disabled = true;
                     } else if (step === 2) {
                         try {
-                            const ajaxUrl = "<?= $this->getUrl('adminhtml/index/prelogin', ['_query' => 'isAjax=1']) ?>";
-                            const response = await fetch(ajaxUrl, {
+                            const result = await mahoFetch("<?= $this->getUrl('adminhtml/index/prelogin') ?>", {
                                 method: 'POST',
                                 body: new FormData(formEl),
                             });
-                            if (!response.ok) {
-                                throw new Error(
-                                    "<?= Mage::helper('adminhtml')->__('Network Error. Please refresh the page.') ?>"
-                                );
-                            }
-                            const result = await response.json();
-                            document.getElementById('messages').textContent = '';
-                            if (result.redirect) {
-                                window.location = result.redirect;
-                            } else if (result.error) {
-                                throw new Error(result.message);
-                            } else if (result.require_twofa) {
+
+                            if (result.require_twofa) {
                                 document.getElementById('step1').classList.add('no-display');
                                 document.getElementById('step2').classList.remove('no-display');
                                 document.getElementById('twofa_verification_code').disabled = false;
@@ -119,8 +146,32 @@
                                 formEl.submit();
                             }
                         } catch (error) {
-                            document.getElementById('messages').textContent = error.message;
+                            messagesEl.textContent = error.message;
                         }
+                    }
+                }
+
+                async function startPasskeyAuthentication() {
+                    try {
+                        const result = await mahoFetch("<?= $this->getUrl('adminhtml/index/passkeyloginstart') ?>", {
+                            method: 'POST',
+                            body: new FormData(formEl),
+                        });
+
+                        recursiveBase64StrToArrayBuffer(result);
+
+                        const cred = await navigator.credentials.get(result);
+                        const passkeyData = {
+                            id: cred.rawId ? arrayBufferToBase64(cred.rawId) : null,
+                        }
+                        for (const [ key, val ] of Object.entries(cred.response)) {
+                            passkeyData[key] = val ? arrayBufferToBase64(val) : null;
+                        }
+
+                        document.getElementById('login').value = JSON.stringify(passkeyData);
+                        gotoStep(2);
+                    } catch (error) {
+                        messagesEl.textContent = error.message;
                     }
                 }
             </script>
