--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -6,7 +6,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -19,14 +19,11 @@
     <div class="block-content">
         <ul>
             <?php $_links = $this->getLinks(); ?>
-            <?php $_index = 1; ?>
-            <?php $_count = count($_links); ?>
             <?php foreach ($_links as $_link): ?>
-                <?php $_last = ($_index++ >= $_count); ?>
                 <?php if ($this->isActive($_link)): ?>
-                    <li class="current<?= ($_last ? ' last' : '') ?>"><strong><?= $_link->getLabel() ?></strong></li>
+                    <li class="current"><a href="<?= $_link->getUrl() ?>"><strong><?= $_link->getLabel() ?></strong></a></li>
                 <?php else: ?>
-                    <li<?= ($_last ? ' class="last"' : '') ?>><a href="<?= $_link->getUrl() ?>"><?= $_link->getLabel() ?></a></li>
+                    <li><a href="<?= $_link->getUrl() ?>"><?= $_link->getLabel() ?></a></li>
                 <?php endif ?>
             <?php endforeach ?>
         </ul>
