Removed account submenu and added "logout" to the account sidebar in the myaccount page

--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -24,6 +24,9 @@
                     <a href="<?= $link->getUrl() ?>"><?= $link->getLabel() ?></a>
                 </li>
             <?php endforeach ?>
+            <li>
+                <a href="<?= Mage::helper('customer')->getLogoutUrl() ?>"><?= $this->__('Logout') ?></a>
+            </li>
         </ul>
     </div>
 </div>
