--- a/app/design/frontend/rwd/default/template/checkout/cart/minicart.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/cart/minicart.phtml
@@ -20,6 +20,6 @@
     <span class="count count-<?= $qty ?>"><?= $qty ?></span>
 </a>
 
-<div id="header-cart" class="block block-cart skip-content">
+<div id="header-cart" class="block-cart skip-content">
     <?= $this->getChildHtml('minicart_content') ?>
 </div>
