--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -52,6 +52,8 @@
     <div id="header-nav" class="skip-content">
         <?= $this->getChildHtml('topMenu') ?>
     </div>
+
+    <div id="minicart-container-mobile" class="header-minicart"></div>
 </header>
 
 <?= $this->getChildHtml('topContainer') ?>
