--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -36,7 +36,7 @@
                 <span class="label"><?= $this->__('Account') ?></span>
             </a>
 
-            <?php if ($this->isModuleOutputEnabled('Mage_Wishlist') && Mage::getConfig('wishlist/general/active')): ?>
+            <?php if ($this->isModuleOutputEnabled('Mage_Wishlist') && Mage::getStoreConfig('wishlist/general/active')): ?>
             <a href="" class="skip-link skip-wishlist" title="<?= $this->__('Wishlist') ?>">
                 <span class="icon"></span>
                 <span class="label"><?= $this->__('Wishlist') ?></span>
