--- a/app/design/frontend/rwd/default/layout/checkout.xml
+++ b/app/design/frontend/rwd/default/layout/checkout.xml
@@ -66,6 +66,9 @@ Default layout, loads most of the pages
         <reference name="root">
             <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
+        <reference name="head">
+            <action method="addItem"><type>skin_css</type><name>css/checkout.css</name></action>
+        </reference>
         <reference name="content">
             <block type="checkout/cart" name="checkout.cart">
                 <action method="setCartTemplate"><value>checkout/cart.phtml</value></action>
@@ -133,6 +136,9 @@ will be rendered on all checkout pages
 
         <reference name="root">
             <action method="setTemplate"><template>page/1column.phtml</template></action>
+        </reference>
+        <reference name="head">
+            <action method="addItem"><type>skin_css</type><name>css/checkout.css</name></action>
         </reference>
         <reference name="content">
             <block type="checkout/multishipping_state" name="checkout_state" template="checkout/multishipping/state.phtml"/>
@@ -336,6 +342,7 @@ One page checkout main layout
             <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
         </reference>
         <reference name="head">
+            <action method="addItem"><type>skin_css</type><name>css/checkout.css</name></action>
             <action method="addJs"><script>varien/accordion.js</script></action>
             <action method="addJs"><script>varien/opcheckout.js</script></action>
         </reference>
@@ -518,6 +525,9 @@ One page checkout order review block
         <reference name="root">
             <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
+        <reference name="head">
+            <action method="addItem"><type>skin_css</type><name>css/checkout.css</name></action>
+        </reference>
         <reference name="content">
             <block type="checkout/onepage_success" name="checkout.success" template="checkout/success.phtml"/>
         </reference>
@@ -526,6 +536,9 @@ One page checkout order review block
         <label>One Page Checkout Failure</label>
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+        </reference>
+        <reference name="head">
+            <action method="addItem"><type>skin_css</type><name>css/checkout.css</name></action>
         </reference>
         <reference name="content">
             <block type="checkout/onepage_failure" name="checkout.failure" template="checkout/onepage/failure.phtml"/>
