--- a/app/design/frontend/rwd/default/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/default/template/page/html/header.phtml
@@ -12,63 +12,46 @@
 
 /** @var Mage_Page_Block_Html_Header $this */
 ?>
-
-<div class="header-language-background">
-    <div class="header-language-container">
-        <div class="store-language-container">
-            <?= $this->getChildHtml('store_language') ?>
-        </div>
-
-        <?= $this->getChildHtml('currency_switcher') ?>
-
-        <p class="welcome-msg"><?= $this->getChildHtml('welcome') ?> <?= $this->getAdditionalHtml() ?></p>
-    </div>
-</div>
-
 <header id="header" class="page-header">
-    <div class="page-header-container">
-        <a class="logo" href="<?= $this->getUrl('') ?>" title="<?= $this->__('Go to Home Page') ?>">
-            <img src="<?= $this->getLogoSrc() ?>" alt="<?= $this->getLogoAlt() ?>" width="<?= $this->getLogoWidth() ?>" height="<?= $this->getLogoHeight() ?>" />
-        </a>
-
-        <?php // In order for the language switcher to display next to logo on smaller viewports, it will be moved here.
-              // See app.js for details ?>
-        <div class="store-language-container"></div>
-
-        <div class="skip-links">
+    <div class="page-header-container skip-links">
+        <div>
             <a href="#header-nav" class="skip-link skip-nav">
                 <span class="icon"></span>
                 <span class="label"><?= $this->__('Menu') ?></span>
             </a>
 
-            <a href="#header-search" class="skip-link skip-search" title="<?= $this->__('Search') ?>">
+            <a class="logo" href="<?= $this->getUrl('') ?>" title="<?= $this->__('Go to Home Page') ?>">
+                <img src="<?= $this->getLogoSrc() ?>" alt="<?= $this->getLogoAlt() ?>" width="<?= $this->getLogoWidth() ?>" height="<?= $this->getLogoHeight() ?>" />
+            </a>
+        </div>
+
+        <?= $this->getChildHtml('topSearch') ?>
+
+        <div>
+            <?= $this->getChildHtml('store_language') ?>
+            <?= $this->getChildHtml('currency_switcher') ?>
+
+            <a href="<?= $this->helper('customer')->getAccountUrl() ?>" class="skip-link skip-account" title="<?= $this->__('Account') ?>">
                 <span class="icon"></span>
-                <span class="label"><?= $this->__('Search') ?></span>
+                <span class="label"><?= $this->__('Account') ?></span>
             </a>
 
-            <div class="account-cart-wrapper">
-                <a href="<?= $this->helper('customer')->getAccountUrl() ?>" data-target-element="#header-account" class="skip-link skip-account" title="<?= $this->__('Account') ?>">
-                    <span class="icon"></span>
-                    <span class="label"><?= $this->__('Account') ?></span>
-                </a>
+            <?php if ($this->isModuleOutputEnabled('Mage_Wishlist') && Mage::getStoreConfig('wishlist/general/active')): ?>
+            <a href="<?= $this->helper('customer')->getWishlistUrl() ?>" class="skip-link skip-wishlist" title="<?= $this->__('Wishlist') ?>">
+                <span class="icon"></span>
+                <span class="label"><?= $this->__('Wishlist') ?></span>
+            </a>
+            <?php endif ?>
 
-                <div class="header-minicart">
-                    <?= $this->getChildHtml('minicart_head') ?>
-                </div>
+            <div class="header-minicart">
+                <?= $this->getChildHtml('minicart_head') ?>
             </div>
         </div>
+    </div>
 
-        <div id="header-nav" class="skip-content">
-            <?= $this->getChildHtml('topMenu') ?>
-        </div>
-
-        <div id="header-search" class="skip-content">
-            <?= $this->getChildHtml('topSearch') ?>
-        </div>
-
-        <div id="header-account" class="skip-content">
-            <?= $this->getChildHtml('topLinks') ?>
-        </div>
+    <div id="minicart-container-mobile" class="header-minicart"></div>
+    <div id="header-nav" class="skip-content">
+        <?= $this->getChildHtml('topMenu') ?>
     </div>
 </header>
 
