--- a/app/design/adminhtml/default/default/template/giftmessage/sales/order/view/items.phtml
+++ b/app/design/adminhtml/default/default/template/giftmessage/sales/order/view/items.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -20,12 +20,5 @@
         <input type="hidden" id="<?= $this->getFieldId('recipient') ?>" name="<?= $this->getFieldName('recipient') ?>"  value="<?= $this->getRecipient() ?>" />
         <input type="hidden" id="<?= $this->getFieldId('message') ?>" name="<?= $this->getFieldName('message') ?>"  value="<?= $this->getMessageText() ?>" />
     </form>
-
-    <?php if ($this->getMessageText()): ?>
-    <div class="gift-options-tooltip-content">
-        <div><strong><?= $this->helper('giftmessage')->__('Gift Message') ?></strong>: </div>
-        <div><?= $this->getMessageText() ?></div>
-    </div>
-    <?php endif ?>
 </div>
 <?php endif ?>
